# speedrun

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: claude-digest.ps1  cursor-review-notify.ps1  cursor-review.md  settings.json
.cursor/: mcp.json
brainlift/: BrainLift.md
docs/: ARCHITECTURE.md  BUILD-PREREQS.md  BUILD-WORKFLOW.md  CHANGELOG-2026-07-01.md  CONTEXT-ENGINEERING.md  DECISIONS.md  DEMO-VIDEO-SCRIPT.md  FUTURE-PLANS.md  PRD.md  PROGRESS.md  PROOF-INDEX.md  QUICKSTART.md  RESULTS.md  RUN-MVP.md  STATE.md  SYNC-SELFHOST.md  VERIFY.md  WEDNESDAY-DELIVERABLES.md  WHAT-WE-BUILT.md  ablation-s8-results.md
research/: claude-AI math-problem generation plus verification.md  claude-GRE Physics plus multi-exam extensibility.md  claude-gre-deepdive.md  (+6 more)
services/speedrun-ai/: README.md  app.py  config.py  graph.py  pyproject.toml
services/speedrun-ai/eval/: README.md  __init__.py  ai-quality.json  ai_quality_eval.py  gate.py  leakage-check.json  leakage.py  leakage_check.py  perf-accuracy.json  perf_eval.py  transfer-gap.json  transfer_eval.py  transfer_items.jsonl
services/speedrun-ai/rag/: README.md  __init__.py  embeddings.py  eval_inhouse.py  retriever.py
services/speedrun-ai/rag/corpus/: gre_math_sources.jsonl
services/speedrun-ai/tests/: __init__.py  test_ai_quality_eval.py  test_app.py  test_gate.py  test_generate_batch.py  test_graph.py  test_leakage.py  test_leakage_check.py  test_perf_eval.py  test_rag_eval.py  test_retriever.py  test_sympy_verifier.py  test_transfer_eval.py
services/speedrun-ai/verify/: __init__.py  sympy_verifier.py
(+22 files in other folders)
