[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speedrun-ai"
version = "0.1.0"
description = "AI problem generation service for the Speedrun GRE Math study app"
requires-python = ">=3.11"
dependencies = [
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = ["verify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
