[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speedrun-ai"
version = "0.1.0"
description = "AI problem generation service for the Speedrun GRE Math study app"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "langchain-core>=1.4.8",
    "langgraph>=1.2.7",
    "numpy>=2.4.6",
    "openai>=2.44.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.9.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.15.20",
    "httpx>=0.28.1",
]

[tool.hatch.build.targets.wheel]
packages = ["verify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
